fix(internet-header): Header Logo covering content on postauto.ch

--- a/packages/internet-header/src/components/post-logo/post-logo.scss
+++ b/packages/internet-header/src/components/post-logo/post-logo.scss
@@ -4,7 +4,6 @@
 
 :host {
   display: block;
-  aspect-ratio: 1/1;
 }
 
 .logo {
